<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpAndSupport"
    android:padding="10dp"
    android:background="@color/white">


    <TextView
        android:id="@+id/help_support_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_and_support_string"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/safety_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/safety_tips_string"
        android:drawableRight="@drawable/ic_arrows"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_below="@id/help_support_title"/>

    <TextView
        android:id="@+id/lost_item_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lost_item_string"
        android:drawableRight="@drawable/ic_arrows"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_below="@id/safety_tips"/>

    <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_string"
        android:drawableRight="@drawable/ic_arrows"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_below="@id/lost_item_policy"/>

    <TextView
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us_string"
        android:drawableRight="@drawable/ic_arrows"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_below="@id/privacy_policy"/>

</RelativeLayout>