<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/oasis_cab">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/oasiscab_logo_head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/black"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:gravity="center"
        android:hint="@string/email_address_hint_string"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@drawable/cursor"
        tools:hint="Email Address" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_margin="15dp"
        android:layout_below="@id/phone_number"
        android:hint="@string/password_hint_string"
        android:drawableLeft="@drawable/ic_lock"
        android:inputType="textPassword"
        android:gravity="center"
        android:textCursorDrawable="@drawable/cursor"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_string"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_string"
        android:textColor="@color/oasis_cab"
        android:background="@drawable/button"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="60dp"/>

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account_string"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"/>


</RelativeLayout>