<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RequestRide"
    tools:showIn="@layout/activity_request_ride"
    android:padding="10dip"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/choose_car_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/request_ride_type_title"/>

        <RadioGroup
            android:id="@+id/vehicle_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/choose_car_type_title">

            <RadioButton
                android:id="@+id/sedan_radio_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/sedan"
                android:drawableEnd="@drawable/sedan"
                android:text="@string/sedan_string"
                android:layout_margin="10dp"/>

            <View
                android:id="@+id/view_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/Grey"
                android:layout_marginTop="5dp"/>

            <RadioButton
                android:id="@+id/mini_van_radio_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/mini_van"
                android:drawableEnd="@drawable/mini_van"
                android:text="@string/mini_van_string"
                android:layout_margin="10dp"/>

            <View
                android:id="@+id/view_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/Grey"
                android:layout_marginTop="5dp"/>

            <RadioButton
                android:id="@+id/kombi_radio_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/kombi"
                android:drawableEnd="@drawable/kombi"
                android:text="@string/kombi_string"
                android:layout_margin="10dp"/>



        </RadioGroup>

        <TextView
            android:id="@+id/drop_pick_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/pick_drop_location_title"
            android:layout_below="@id/vehicle_radio"
            android:layout_marginTop="20dp"/>


        <AutoCompleteTextView
            android:id="@+id/pick_up_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border_button"
            android:hint="@string/default_pick_up_loc_string"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart= "5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textCursorDrawable="@drawable/cursor"
            android:drawableLeft="@drawable/ic_circular_shape_silhouette"
            android:drawablePadding="10dp"
            android:layout_below="@id/drop_pick_location_title"/>

        <TextView
            android:id="@+id/current_location_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location_string"
            android:layout_below="@id/pick_up_location"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_my_location_black_24dp"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/favourite_location_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_from_fav_string"
            android:layout_below="@id/current_location_txt"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_heart_b"
            android:drawablePadding="5dp"/>

        <AutoCompleteTextView
            android:id="@+id/drop_off_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border_button"
            android:hint="@string/default_drop_off_loc_string"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:textCursorDrawable="@drawable/cursor"
            android:layout_below="@id/favourite_location_txt"
            android:drawableLeft="@drawable/ic_circular_shape_silhouette1"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/favourite_drop_location_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_from_fav_string"
            android:layout_below="@id/drop_off_location"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_heart_b"
            android:drawablePadding="5dp"/>

    </RelativeLayout>

</ScrollView>