<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavouriteLocation"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nav_favourite_location_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favourite_location_string"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/name_significance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nav_favourite_location_title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rectangle"
            android:hint="@string/name_significance_hint_string"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/cursor"/>

        <LinearLayout
            android:id="@+id/location_selection_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/name_significance"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/add_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rectangle"
                android:hint="@string/type_add_location_hint_string"
                android:padding="10dp"
                android:layout_weight="2"
                android:textCursorDrawable="@drawable/cursor"/>

            <Button
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_string"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0"/>
        </LinearLayout>

        <TextView
            android:id="@+id/click_map_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_on_map_string"
            android:layout_below="@id/location_selection_box"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/ic_right_arrow_in_black_circular_button"
            android:drawablePadding="10dp"/>

        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/click_map_string"
            android:background="@color/Grey"
            android:layout_marginTop="20dp"/>

            <ListView
                android:id="@+id/favourite_locations_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:layout_marginTop="10dp">
            </ListView>
    </RelativeLayout>
</ScrollView>