<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Home"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sunnyside, pretoria"
        android:textColor="@color/Grey"
        android:layout_below="@id/date_time"
        android:textSize="16sp"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/rate_driver_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_driver_string"
            android:textSize="14sp"
            android:background="@drawable/black_border_button"
            android:textColor="@color/black"
            android:layout_marginRight="20dp"
            android:padding="7dp"
            android:layout_weight="0"/>

        <TextView
            android:id="@+id/complain_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complain_string"
            android:textSize="14sp"
            android:background="@drawable/black_border_button"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:padding="7dp"
            android:layout_weight="0"/>

        <TextView
            android:id="@+id/drivers_profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_profile_string"
            android:textSize="14sp"
            android:background="@drawable/black_border_button"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:padding="7dp"
            android:layout_weight="0"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Grey"
        android:layout_below="@id/buttonPanel"
        android:layout_marginTop="15dp"/>

</RelativeLayout>
